# euroml

./: .gitignore  README.md  daily_load.py  download.py  extract_plot.py  prediction_engine.py  prep_csv.py  pyproject.toml  requirements.txt  testptorch.py
.github/workflows/: download.yml  research.yml
dataset/: 2004_eml.json  2005_eml.json  2006_eml.json  2007_eml.json  2008_eml.json  2009_eml.json  2010_eml.json  2011_eml.json  2012_eml.json  2013_eml.json  2014_eml.json  2015_eml.json  2016_eml.json  2017_eml.json  2018_eml.json  2019_eml.json  2020_eml.json  2021_eml.json  2022_eml.json  2023_eml.json  2024_eml.json  2025_eml.json  2026_eml.json  test_data.csv  train_data.csv
engine/: __init__.py  backtest.py  cache.py  calibration.py  data.py  features.py  memory.py  models.py  spec.py  strategies.py  strategy_runner.py  tickets.py
research_outputs/latest/: compare_2025.json  compare_2026.json  engine_state.json  metadata.json  next_draw_prediction.json  summary.md
scripts/: backtest_2025.sh  backtest_2025_rolling.sh  backtest_2026.sh  build_research_summary.py  compare_strategies.sh  predict_next.sh  prepare_prediction_memory.py  research_cycle.sh
