[project]
name = "euroml"
version = "0.1.0"
description = "Research tooling for EuroMillions historical data."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.12.2",
  "matplotlib>=3.8.0",
  "numpy>=1.24.1",
  "pandas>=2.1.0",
  "requests==2.31.0",
  "scikit-learn>=1.3.0",
  "tabulate>=0.9.0",
]

[tool.uv]
package = false
